--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.8.0
+asyncpg==0.30.0
 attrs==25.1.0
 beautifulsoup4==4.12.3
 behave==1.2.6
@@ -19,6 +20,7 @@ colorama==0.4.6
 cssselect==1.2.0
 dnspython==2.7.0
 email_validator==2.2.0
+et_xmlfile==2.0.0
 exceptiongroup==1.2.2
 execnet==2.1.1
 fastapi==0.115.8
@@ -26,11 +28,14 @@ fastapi-cli==0.0.7
 fasteners==0.19
 filelock==3.17.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+flower==2.0.1
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
+humanize==4.11.0
 idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -41,6 +46,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mycdp==1.1.0
 numpy==2.2.2
+openpyxl==3.1.5
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
@@ -50,7 +56,9 @@ parse_type==0.6.4
 pdbp==1.6.1
 platformdirs==4.3.6
 pluggy==1.5.0
+prometheus_client==0.21.1
 prompt_toolkit==3.0.50
+psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
@@ -86,6 +94,7 @@ soupsieve==2.6
 SQLAlchemy==2.0.37
 starlette==0.45.3
 tabcompleter==1.4.0
+tornado==6.4.2
 trio==0.28.0
 trio-websocket==0.11.1
 typer==0.15.1
