--- a/requirements.txt
+++ b/requirements.txt
@@ -105,6 +105,7 @@ uvicorn==0.34.0
 vine==5.1.0
 watchfiles==1.0.4
 wcwidth==0.2.13
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 websockets==14.2
 Werkzeug==3.1.3
